edit-user -> label overlap solved

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,7 +14,3 @@ a {
 {
   margin: 0 auto;
 }
-
-.label-modal-edit{
-visibility : hidden;
-}
